# XenosRecomp

./: README.md
ShaderRecomp/: CMakeLists.txt  dxc_compiler.cpp  main.cpp  pch.h  shader_common.h  shader_common.hlsli  shader_recompiler.cpp  shader_recompiler.h
XenosRecomp/: CMakeLists.txt  air_compiler.cpp  main.cpp  shader_common.h  shader_recompiler.cpp
